Renamed map div from #map to #mymap to avoid overwriting of the global map variable.

--- a/html/client.html
+++ b/html/client.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-<div id="map" class="map" tabindex="1">
+<div id="mymap" class="map" tabindex="1">
     Ihr Browser unterst&uuml;tzt weder das HTML 5 Canvas Element noch die OpenLayers 3 Bibliothek, die zum Anzeigen der Karte ben&ouml;tigt werden. <br />
     Sie sollten sich &uuml;berlegen ihren Browser zu aktualisieren.<br />
     &nbsp;<br />
