--- a/html/client.html
+++ b/html/client.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
     <style type="text/css">
-        html, body, .map {
+        html, body, #g4u-map {
             width: 100%;
             height: 100%;
             margin: 0;
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-<div id="map" class="map" tabindex="1">
+<div id="g4u-map" class="g4u-map" tabindex="1">
     Ihr Browser unterst&uuml;tzt weder das HTML 5 Canvas Element noch die OpenLayers 3 Bibliothek, die zum Anzeigen der Karte ben&ouml;tigt werden. <br />
     Sie sollten sich &uuml;berlegen ihren Browser zu aktualisieren.<br />
     &nbsp;<br />
