--- a/html/client.html
+++ b/html/client.html
@@ -13,6 +13,13 @@
             padding: 0;
         }
     </style>
+
+    <script>
+        // These variables can be overwritten to use other than default configuration files
+        // window.clientConfPath = ''
+        // window.layerConfPath = ''
+    </script>
+
 </head>
 
 <body>
