renamed global variable names

--- a/html/client.html
+++ b/html/client.html
@@ -16,8 +16,8 @@
 
     <script>
         // These variables can be overwritten to use other than default configuration files
-        // window.clientConfPath = ''
-        // window.layerConfPath = ''
+        // window.g4uClientConfPath = ''
+        // window.g4uLayerConfPath = ''
     </script>
 
 </head>
