Make path to clientConfig and layerConfig configurable from html file (#41)
Fixes #28

--- a/html/client.html
+++ b/html/client.html
@@ -13,6 +13,13 @@
             padding: 0;
         }
     </style>
+
+    <script>
+        // These variables can be overwritten to use other than default configuration files
+        // window.g4uClientConfPath = ''
+        // window.g4uLayerConfPath = ''
+    </script>
+
 </head>
 
 <body>
