--- a/html/client.html
+++ b/html/client.html
@@ -13,13 +13,6 @@
             padding: 0;
         }
     </style>
-
-    <script>
-        // These variables can be overwritten to use other than default configuration files
-        // window.g4uClientConfPath = ''
-        // window.g4uLayerConfPath = ''
-    </script>
-
 </head>
 
 <body>
@@ -35,5 +28,10 @@
     &nbsp;<br />
     Being a mandatory prerequisite for this page, Javascript needs to be enabled.
 </noscript>
+<script>
+    createG4U('#g4u-map')
+    // To use other than default config files:
+    // createG4U('#g4u-map', 'path/to/clientConfig.json', 'path/to/layerConfig.json')
+</script>
 </body>
 </html>
