Infoseite/Information/... headline now no longer prepended to info page, info pages updated accordingly

--- a/files/infos_de.html
+++ b/files/infos_de.html
@@ -1,12 +1,13 @@
-    <h3>Inhalt</h3>
-    Hier sollten hilfreiche Informationen erscheinen.<br />
-    
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    Hier h&ouml;rt die Datei auf.
+<h1>Infoseite</h1>
+<h3>Inhalt</h3>
+Hier sollten hilfreiche Informationen erscheinen.<br />
+
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+Hier h&ouml;rt die Datei auf.
