--- a/files/infos_en.html
+++ b/files/infos_en.html
@@ -1,12 +1,13 @@
-﻿    <h3>Content</h3>
-    Here should appear helpful information.<br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    End of the file.
+﻿<h1>Information</h1>
+<h3>Content</h3>
+Here should appear helpful information.<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+End of the file.
