--- a/html/client.html
+++ b/html/client.html
@@ -5,6 +5,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
+    <title><%= htmlWebpackPlugin.options.title %></title>
     <style type="text/css">
         html, body, #g4u-map {
             width: 100%;
