--- a/html/client.html
+++ b/html/client.html
@@ -14,6 +14,9 @@
             padding: 0;
         }
     </style>
+
+    <script src="/node_modules/openlayers/dist/ol-debug.js"></script>
+    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
 </head>
 
 <body>
