--- a/html/client.html
+++ b/html/client.html
@@ -19,11 +19,11 @@
 <body>
 <div id="g4u-map" class="g4u-map" tabindex="1">
     <div class="g4u-browser-support-message" style="display: none;">
-        Ihr Browser unterst&uuml;tzt weder das HTML 5 Canvas Element noch die OpenLayers 3 Bibliothek, die zum
+        Ihr Browser unterst&uuml;tzt weder das HTML 5 Canvas Element noch die OpenLayers Bibliothek, die zum
         Anzeigen der Karte ben&ouml;tigt werden. <br/>
         Sie sollten sich &uuml;berlegen ihren Browser zu aktualisieren.<br/>
         &nbsp;<br/>
-        Your browser seems to support neither the HTML 5 canvas element nor the OpenLayers 3 library which are both
+        Your browser seems to support neither the HTML 5 canvas element nor the OpenLayers library which are both
         required to display the map.<br/>
         You might want to consider upgrading to a more advanced browser.
     </div>
