--- a/html/client.html
+++ b/html/client.html
@@ -35,8 +35,16 @@
 </noscript>
 <script>
     createG4U('#g4u-map')
+
     // To use other than default config files:
     // createG4U('#g4u-map', 'path/to/clientConfig.json', 'path/to/layerConfig.json')
+
+    // To access the map when its ready (layers and ui are initialized):
+    // createG4U(...).then(function (map) {
+    //   map.asSoonAs('ready', true, function () {
+    //     ... map is ready ...
+    //   })
+    // })
 </script>
 </body>
 </html>
