--- a/html/client.html
+++ b/html/client.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta name="application-name" content="Guide 4 You - G4U">
-
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <meta content="utf-8" http-equiv="encoding">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
     <title><%= htmlWebpackPlugin.options.title %></title>
@@ -41,9 +42,7 @@
 
     // To access the map when its ready (layers and ui are initialized):
     // g4u.createMap(...).then(function (map) {
-    //   map.asSoonAs('ready', true, function () {
-    //     ... map is ready ...
-    //   })
+    //   ... map is ready ...
     // })
 </script>
 </body>
