load all configs in one place. added seperable styleMap

--- a/html/client.html
+++ b/html/client.html
@@ -38,7 +38,7 @@
     g4u.createMap('#g4u-map')
 
     // To use other than default config files:
-    // g4u.createMap('#g4u-map', 'path/to/clientConfig.json', 'path/to/layerConfig.json')
+    // g4u.createMap('#g4u-map', { client: 'path/to/clientConfig.json', layer: 'path/to/layerConfig.json' })
 
     // To access the map when its ready (layers and ui are initialized):
     // g4u.createMap(...).then(function (map) {
